--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Assignment 1</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+   <script src="js/scripts.js"></script>
 
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/scripts.js"></script>
 </head>
 <body>
     <header class="head">
@@ -46,6 +47,28 @@
           <div class="div11"></div>
           <div class="div12"></div>
           <div class="div13"></div>
+
+          <div class="sign-up">
+            <h2 class="s">Sign Up</h2>
+            <p class="s">If u would like to register for one of our courses ,use the form below</p>
+          <input id="name" class="form" type="text" placeholder="Name and Surname">
+          <input id="email" class="form" type="text" placeholder="Enter Email">
+          <input id="number" class="form" type="numbers" placeholder="Contact Number">
+          <select class="form" name="select" id="select" >
+             <option value="">UX Design</option>
+             <option value="">Development</option>
+             <option value="">Product Design</option>
+          </select>
+          <input id="password" class="form" type="text" placeholder="Password">
+          <input id="check" class="form2" type="checkbox" placeholder="Send me spam Newsletters">
+          <p class="spam">Send me Spam Newsletters</p>
+          <button type="button" onclick="addStudent()" class="register">Register Account</button>
+        </div>
+          <div class="photo">
+            <h2 class="g">Our Gallery</h2>
+            <p class="g">Take a look at son of our cool shit!</p>
+          </div>
+          
     </section>
 
     <footer class="foot">
